fixes to security config